--- a/NEWS
+++ b/NEWS
@@ -340,12 +340,16 @@ version 1.0.4: (2017-08-01)
 - Updated DESCRIPTION file (authors and description)
 - Updated welcome message (with link to new wiki)
 
+version 1.0.5: (2017-08-01)
+- Major changes function-by-function
+  * BASiCS_TestDE : plotting functionality for offset added
+- ACF plot added to BASiCS_Chain plots
+
 - TODO:
   * Add examples of table viewing in BASiCS_TestDE 
   * Report offset + uncertainty in BASiCS_TestDE
   * Offset plot in BASiCS_TestDE
   * Separate output table for mean and overdispersion in BASiCS_TestDE
-  * Add ACF to chain plots
   * In plots, change axis labels to be text (no greek!)
   * Implement BASiCS_Denoise in C++
   * Create 'no longer in use' message for selected functions. 
@@ -356,5 +360,11 @@ version 1.0.4: (2017-08-01)
   * Convert Rcpp print to messages
   * Create extra vignette file with test cases (e.g. different thresholds for HVG/LVG), to be removed from BioC submission
   * Check all plots are in the same log scale
+  * Missing info about offset for phi (to do GenBio figure)
+  * Return offset corrected chain
+  * Revise whether offset correction is correctly applied
+  * Change ref/test to group1, group2
+  * How does Aaron solve the offset issue? Are we assuming most genes are not DE?
+  
   
   
